31. Only show icons in message widget buttons if style uses icons for dialog
    buttons.
32. Add option to have separate play queue search action.
33. Revert back to storing scaled covers as JPG. PNG is taking too much space,
    especially with retina displays.
34. Read ArtistSort, AlbumArtistSort, and AlbumSort from MPD. If found, use
    these to sort items.

1.4.2
-----
 1. When guessing song details from filename (due to missing tags), remove any
    extension - not just three letter extensions!
 2. In tag editor, only show '(Various)' hint for the 'All tracks' entry.
 3. Also capitalise composer in tag editor.
 4. Resize device properties dialog when changing transcoder.
 5. Initialise sidebar icon sizes before constructing.
 6. Display multiple genres as separate entries in playlists page genre combo.
 7. Resize cover in grouped view if it is too wide.
 8. In context view, when creating links to similar artists compare artists
    names case-insensitively.
 9. Fix downloading of podcasts when url is redirected.
10. If 'force single click' is disabled, then double-click on icon view will
    not add artist/album to playqueue but navigate into.
11. When using Cache config page to clear disk cover/scaled-cover cache, also
    clear memory cache.
12. Allow to change stream, and online-service, filter search category without
    closing current search field.
13. Fix combo-box text changed signal for Qt5 builds.
14. Don't have double spacer when cover-widget is hidden.
15. Fix crash in context view if song tracks changed quickly.
16. Better method of setting disabled opacity for monochrome icons.

1.4.1
-----
 1. Remove unused var warning when compiling without online services.
 2. Remove some moc/QObject warnings in KDE builds without streams or http
    server.
 3. Update current song to scrobble, even if disabled, so that when enabled we
    can scrobble.
 4. Seems like MPDSribble itself is broken with regards to sending "love"